--- a/NutriTrack/AppShell.xaml
+++ b/NutriTrack/AppShell.xaml
@@ -12,4 +12,9 @@
       ContentTemplate="{DataTemplate local:LoginPage}"
       Route="LoginPage" 
       FlyoutItemIsVisible="False"/>
+
+    <ShellContent Title="Home"
+                  ContentTemplate="{DataTemplate local:HomePage}"
+                  Route="HomePage"
+                  FlyoutItemIsVisible="False"/>
 </Shell>
