--- a/NutriTrack/Views/HomePage.xaml
+++ b/NutriTrack/Views/HomePage.xaml
@@ -18,15 +18,18 @@
 
             <Button Text="View Journey"
                     FontSize="18"
-                    Clicked="OnJourneyClicked" />
+                    Clicked="OnJourneyClicked"
+                    BackgroundColor="DarkGreen"/>
 
             <Button Text="Search Food"
                     FontSize="18"
-                    Clicked="OnSearchClicked"/>
+                    Clicked="OnSearchClicked"
+                    BackgroundColor="DarkGreen"/>
 
             <Button Text="Food Info"
                     FontSize="18"
-                    Clicked="OnFoodInfoClicked" />
+                    Clicked="OnFoodInfoClicked" 
+                    BackgroundColor="DarkGreen"/>
 
         </VerticalStackLayout>
     </ScrollView>
