--- a/NutriTrack/Views/FoodInfoPage.xaml
+++ b/NutriTrack/Views/FoodInfoPage.xaml
@@ -2,11 +2,12 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="NutriTrack.Views.FoodInfoPage"
-             Title="FoodInfoPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="Food Info">
+
+    <ScrollView>
+        <VerticalStackLayout Padding="20" Spacing="20">
+            <Label x:Name="FoodTitle" FontSize="28" FontAttributes="Bold" HorizontalOptions="Center" />
+            <Label x:Name="NutritionInfoLabel" FontSize="18" HorizontalOptions="Center" />
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
