--- a/NutriTrack/AppShell.xaml
+++ b/NutriTrack/AppShell.xaml
@@ -3,18 +3,31 @@
     x:Class="NutriTrack.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:NutriTrack.Views"
+    xmlns:views="clr-namespace:NutriTrack.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="NutriTrack">
 
+    <!-- Login Page (Invisible) -->
     <ShellContent
-        
-      ContentTemplate="{DataTemplate local:LoginPage}"
-      Route="LoginPage" 
-      FlyoutItemIsVisible="False"/>
+        Route="LoginPage"
+        ContentTemplate="{DataTemplate views:LoginPage}"
+        FlyoutItemIsVisible="False" />
 
-    <ShellContent Title="Home"
-                  ContentTemplate="{DataTemplate local:HomePage}"
-                  Route="HomePage"
-                  FlyoutItemIsVisible="False"/>
+    <!-- Tab Bar with Visible Pages -->
+    <TabBar>
+        <ShellContent
+            Title="Home"
+            ContentTemplate="{DataTemplate views:HomePage}"
+            Route="HomePage" />
+
+        <ShellContent
+            Title="Search"
+            ContentTemplate="{DataTemplate views:SearchPage}"
+            Route="SearchPage" />
+
+        <ShellContent
+            Title="Food Info"
+            ContentTemplate="{DataTemplate views:FoodInfoPage}"
+            Route="FoodInfoPage" />
+    </TabBar>
 </Shell>
