--- a/NutriTrack/Views/SearchPage.xaml
+++ b/NutriTrack/Views/SearchPage.xaml
@@ -2,11 +2,30 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="NutriTrack.Views.SearchPage"
-             Title="SearchPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="Search Food">
+    <ScrollView>
+        <VerticalStackLayout Padding="20" Spacing="15">
+
+            <Label Text="Search for Food"
+                   FontSize="24"
+                   HorizontalOptions="Center" />
+
+            <SearchBar x:Name="FoodSearchBar"
+                       Placeholder="Enter food name..."
+                       SearchButtonPressed="OnSearchButtonPressed" />
+
+            <CollectionView x:Name="ResultsCollectionView"
+                            SelectionMode="Single"
+                            SelectionChanged="OnFoodSelected">
+                <CollectionView.ItemTemplate>
+                    <DataTemplate>
+                        <Frame BorderColor="Gray" Padding="10" Margin="5">
+                            <Label Text="{Binding}" FontSize="18" />
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
