--- a/NutriTrack/AppShell.xaml
+++ b/NutriTrack/AppShell.xaml
@@ -4,29 +4,24 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:views="clr-namespace:NutriTrack.Views"
-    Shell.FlyoutBehavior="Disabled"
-    Title="NutriTrack">
+    Shell.FlyoutBehavior="Disabled">
 
-    <!-- Login Page (Invisible) -->
-    <ShellContent
-        Route="LoginPage"
-        ContentTemplate="{DataTemplate views:LoginPage}"
-        FlyoutItemIsVisible="False" />
-
-    <!-- Tab Bar with Visible Pages -->
     <TabBar>
         <ShellContent
             Title="Home"
+            Icon="home.png"
             ContentTemplate="{DataTemplate views:HomePage}"
             Route="HomePage" />
 
         <ShellContent
             Title="Search"
+            Icon="search.png"
             ContentTemplate="{DataTemplate views:SearchPage}"
             Route="SearchPage" />
 
         <ShellContent
             Title="Food Info"
+            Icon="info.png"
             ContentTemplate="{DataTemplate views:FoodInfoPage}"
             Route="FoodInfoPage" />
     </TabBar>
